codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__backend_banners_tests__usage_wait_unknown_plan.snap
---
source: tui/src/chatwidget/tests/backend_banners_tests.rs
expression: stable
---
  Usage limit reached (Auto-continue is enabled)
  Your turn will automatically continue when the usage limit resets.

› 1. Redeem reset
  2. Keep waiting

  Press a number to choose · ↑ to move up · ↓ to move down · enter to select

• Resuming in <remaining> • esc to interrupt


› Ask Codex to do anything

  test-model-a default · /tmp/project
