codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__backend_banners_tests__usage_wait_workspace.snap
---
source: tui/src/chatwidget/tests/backend_banners_tests.rs
expression: stable
---
  Workspace usage limit reached (Auto-continue is enabled)
  Your turn will automatically continue when your workspace usage limit resets. Request
  a limit increase to continue sooner.

› 1. Request increase
  2. Keep waiting

  Press a number to choose · ↑ to move up · ↓ to move down · enter to select

• Resuming in <remaining> • esc to interrupt


› Ask Codex to do anything

  test-model-a default · /tmp/project
